Editor: Fix toolbar gap in mid-range viewports

--- a/client/post-editor/style.scss
+++ b/client/post-editor/style.scss
@@ -82,14 +82,8 @@
 	max-width: 100%;
 	margin: 0 auto;
 
-	@include breakpoint( ">660px" ) {
+	@include breakpoint( ">960px" ) {
 		width: 700px;
-	}
-}
-
-.editor .mce-stack-layout-item .mce-container-body  {
-	@include breakpoint( "<960px" ) {
-		width: inherit;
 	}
 }
 
